--- a/gradle.properties
+++ b/gradle.properties
@@ -168,7 +168,10 @@ httpclientVersion=4.5.13
 httpcoreVersion=4.4.14
 httpmimeVersion=4.5.13
 
-jacksonVersion=2.12.3
+# Using 2.12.3 produces a runtime error related to support for java.time.LocalDate
+# that can probably be resolved with some other dependencies in the mix but attempts
+# so far have been unsuccessful
+jacksonVersion=2.11.3
 jacksonAnnotationsVersion=2.12.3
 jacksonJaxrsBaseVersion=2.12.3
 
