First attempt at swapping jTidy --> jSoup

--- a/gradle.properties
+++ b/gradle.properties
@@ -202,7 +202,8 @@ jsonSimpleVersion=1.1.1
 
 jtdsVersion=1.3.1
 
-jtidyVersion=r918
+# https://mvnrepository.com/artifact/org.jsoup/jsoup
+jsoupVersion=1.13.1
 
 junitVersion=4.13.2
 
