Publish embedded jar from embedded project

--- a/server/embedded/build.gradle
+++ b/server/embedded/build.gradle
@@ -55,5 +55,13 @@ project.publishing {
                 scm PomFileHelper.getLabKeyGitScm()
             }
         }
+
+        if (BuildUtils.shouldPublish(project))
+        {
+            project.artifactoryPublish {
+                publications('embeddedJar')
+            }
+            project.artifactoryPublish.skip = false
+        }
     }
 }
