Force consistent dependency for renamed library

--- a/gradle.properties
+++ b/gradle.properties
@@ -267,6 +267,9 @@ tukaaniXZVersion=1.9
 
 validationApiVersion=1.1.0.Final
 
+# NLP and SAML bring woodstox-core in as a transitive dependency but with very different versions.  We force the later version.
+woodstoxCoreVersion=6.2.1
+
 # saml and query bring in different versions transitively; we force the later one
 xalanVersion=2.7.2
 
