--- a/build.gradle
+++ b/build.gradle
@@ -217,8 +217,9 @@ allprojects {
                     force "org.hamcrest:hamcrest-core:${hamcrestVersion}"
                     force "org.hamcrest:hamcrest-library:${hamcrestVersion}"
                     force "junit:junit:${junitVersion}"
-                    // force consistency in nlp and saml that bring this in transitively
+                    // force consistency in nlp and saml that bring these in transitively
                     force "org.codehaus.woodstox:stax2-api:${stax2ApiVersion}"
+                    force "com.fasterxml.woodstox:woodstox-core:${woodstoxCoreVersion}"
                     // force consistency in transitive dependency for fileTransfer compared to api
                     // This can be removed when the googleHttpClient version is updated to bring in a consistent version
                     force "com.google.code.findbugs:jsr305:${jsr305Version}"
@@ -243,6 +244,9 @@ allprojects {
 
                         // jdk5 backport of guava has significant conflicts with guava 18+
                         substitute module('com.google.guava:guava-jdk5') with module("com.google.guava:guava:${guavaVersion}")
+
+                        // This library was renamed
+                        substitute module('org.codehaus.woodstox:woodstox-core-asl') with module("com.fasterxml.woodstox:woodstox-core:${woodstoxCoreVersion}")
 
                         if (project.hasProperty('apacheTomcatVersion'))
                         {
