Restore springBootTomcatVersion and ensure it matches springBootVersion's Tomcat version

--- a/gradle.properties
+++ b/gradle.properties
@@ -195,7 +195,7 @@ jmockVersion=2.6.0
 
 jodaTimeVersion=2.8.1
 
-# brought in transitively from guava and other google packages.  Need to resolve consistently
+# brought in transitively from guava and other google packages. Need to resolve consistently
 jsr305Version=3.0.2
 
 jsonSimpleVersion=1.1.1
@@ -247,6 +247,8 @@ slf4jLog4jApiVersion=1.7.30
 
 
 springBootVersion=2.2.13.RELEASE
+# This MUST match the Tomcat version dictated by springBootVersion
+springBootTomcatVersion=9.0.41
 
 # N.B. Spring version 5+ brings in a change to form handling such that GET and POST parameters are both used when
 # posting a form. For some of our forms this causes heartache.
@@ -254,7 +256,7 @@ springVersion=4.3.20.RELEASE
 
 sqliteJdbcVersion=3.7.2
 
-# NLP and SAML bring stax2-api in as a transitive dependency but with very different versions.  We force the later version.
+# NLP and SAML bring stax2-api in as a transitive dependency but with very different versions. We force the later version.
 stax2ApiVersion=4.2.1
 
 thumbnailatorVersion=0.4.8
@@ -265,7 +267,7 @@ tukaaniXZVersion=1.9
 
 validationApiVersion=1.1.0.Final
 
-# NLP and SAML bring woodstox-core in as a transitive dependency but with very different versions.  We force the later version.
+# NLP and SAML bring woodstox-core in as a transitive dependency but with very different versions. We force the later version.
 woodstoxCoreVersion=6.2.1
 
 # saml and query bring in different versions transitively; we force the later one
