--- a/gradle.properties
+++ b/gradle.properties
@@ -91,7 +91,7 @@ activationVersion=1.2.1
 
 annotationsVersion=15.0
 
-apacheTomcatVersion=8.5.69
+apacheTomcatVersion=9.0.50
 
 #Unifying version used by DISCVR and Premium
 apacheDirectoryVersion=1.0.3
@@ -195,7 +195,7 @@ jmockVersion=2.6.0
 
 jodaTimeVersion=2.8.1
 
-# brought in transitively from guava and other google packages.  Need to resolve consistently
+# brought in transitively from guava and other google packages. Need to resolve consistently
 jsr305Version=3.0.2
 
 jsonSimpleVersion=1.1.1
@@ -247,7 +247,7 @@ slf4jLog4jApiVersion=1.7.30
 
 
 springBootVersion=2.2.13.RELEASE
-# Keep building the core server with 8.5.x, but use 9.0.x within the Embedded code until support for 8.5.x is dropped
+# This MUST match the Tomcat version dictated by springBootVersion
 springBootTomcatVersion=9.0.41
 
 # N.B. Spring version 5+ brings in a change to form handling such that GET and POST parameters are both used when
@@ -256,7 +256,7 @@ springVersion=4.3.20.RELEASE
 
 sqliteJdbcVersion=3.7.2
 
-# NLP and SAML bring stax2-api in as a transitive dependency but with very different versions.  We force the later version.
+# NLP and SAML bring stax2-api in as a transitive dependency but with very different versions. We force the later version.
 stax2ApiVersion=4.2.1
 
 thumbnailatorVersion=0.4.8
@@ -267,7 +267,7 @@ tukaaniXZVersion=1.9
 
 validationApiVersion=1.1.0.Final
 
-# NLP and SAML bring woodstox-core in as a transitive dependency but with very different versions.  We force the later version.
+# NLP and SAML bring woodstox-core in as a transitive dependency but with very different versions. We force the later version.
 woodstoxCoreVersion=6.2.1
 
 # saml and query bring in different versions transitively; we force the later one
