--- a/gradle/settings/ehr.gradle
+++ b/gradle/settings/ehr.gradle
@@ -27,6 +27,7 @@ import org.labkey.gradle.util.BuildUtils
  */
 
 List<String> ehrModulesDirs = [
+        "server/modules/nircEHRModules",
         "server/modules/onprcEHRModules",
         "server/modules/ehrModules",
         "server/modules/snprcEHRModules",
