Revert accidental commit

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,10 +20,10 @@ org.gradle.jvmargs=-Xmx2048m
 versionConflictAction=delete
 
 # uncomment the following line for running the application with embedded tomcat
-useEmbeddedTomcat
+#useEmbeddedTomcat
 
 # uncomment the following line when using a local build of a server with embedded tomcat
-useLocalBuild
+#useLocalBuild
 
 # uncomment the following line when using SSL for your embedded tomcat server
 #useSsl
