Issue 43523: MetadataUnavailableException - multiple document elements on table name rename

--- a/server/configs/mssql.properties
+++ b/server/configs/mssql.properties
@@ -5,7 +5,7 @@ smtpUser=Anonymous
 smtpPort=25
 
 # Use the jTDS jdbc driver on localhost
-databaseDefault=labkey
+databaseDefault=labkey_dev
 databaseBootstrap=labkey2
 databaseMaster=master
 databaseDefaultHost=localhost
@@ -18,7 +18,7 @@ databaseVersion=2008
 jdbcDriverClassName=net.sourceforge.jtds.jdbc.Driver
 jdbcURL=jdbc:jtds:sqlserver://${jdbcHost}:${jdbcPort}/${jdbcDatabase}${jdbcURLParameters}
 jdbcUser=sa
-jdbcPassword=sa
+jdbcPassword=Strong_Passw0rd
 
 # key for the encrypted property store
 masterEncryptionKey=defaultKey
