Try with 2.6.0 instead

--- a/gradle.properties
+++ b/gradle.properties
@@ -245,7 +245,7 @@ slf4jLog4j12Version=1.7.32
 slf4jLog4jApiVersion=1.7.32
 
 
-springBootVersion=2.6.1.RELEASE
+springBootVersion=2.6.0
 # This MUST match the Tomcat version dictated by springBootVersion
 springBootTomcatVersion=9.0.55
 
