Compile with Java 16 source & target (#153)

--- a/gradle.properties
+++ b/gradle.properties
@@ -35,8 +35,8 @@ artifactory_contextUrl=https://artifactory.labkey.com/artifactory
 
 # The source and target versions of Java for compilation tasks
 # @JavaRuntimeVersion
-sourceCompatibility=14
-targetCompatibility=14
+sourceCompatibility=16
+targetCompatibility=16
 
 # indicates if we should use previously published artifacts or build from source
 # This setting applies to all projects unless overridden on command line or in a
@@ -91,7 +91,7 @@ activationVersion=1.2.2
 
 annotationsVersion=15.0
 
-apacheTomcatVersion=9.0.50
+apacheTomcatVersion=9.0.55
 
 #Unifying version used by DISCVR and Premium
 apacheDirectoryVersion=1.0.3
@@ -245,9 +245,9 @@ slf4jLog4j12Version=1.7.32
 slf4jLog4jApiVersion=1.7.32
 
 
-springBootVersion=2.2.13.RELEASE
+springBootVersion=2.6.0
 # This MUST match the Tomcat version dictated by springBootVersion
-springBootTomcatVersion=9.0.41
+springBootTomcatVersion=9.0.55
 
 # N.B. Spring version 5+ brings in a change to form handling such that GET and POST parameters are both used when
 # posting a form. For some of our forms this causes heartache.
