--- a/server/embedded/build.gradle
+++ b/server/embedded/build.gradle
@@ -45,7 +45,7 @@ project.publishing {
             groupId = 'org.labkey.build'
             artifactId = 'embedded'
             version = project.version
-            artifact project.tasks.jar.outputs.files.singleFile
+            artifact project.tasks.bootJar.outputs.files.singleFile
             pom {
                 name = "LabKey Server Embedded"
                 description = "LabKey classes for producing distributions with embedded TomCat."
@@ -64,4 +64,12 @@ project.publishing {
             project.artifactoryPublish.skip = false
         }
     }
+}
+
+// The primary artifact from this build should be the jar produced from the bootJar task as that contains
+// the SpringBoot classes.  This default jar task produces a jar file containing only the classes from src,
+// which no one really needs.  If produced, this is the jar file that will be used in distributions, making
+// them not really embedding anything.
+jar {
+ onlyIf { false }
 }
