Upgrade a couple dependencies and use preferred property name

--- a/gradle.properties
+++ b/gradle.properties
@@ -208,7 +208,7 @@ kaptchaVersion=2.3
 
 log4j2Version=2.17.1
 
-mysqlDriverVersion=8.0.27
+mysqlDriverVersion=8.0.28
 
 objenesisVersion=1.0
 
@@ -243,7 +243,7 @@ slf4jLog4j12Version=1.7.32
 slf4jLog4jApiVersion=1.7.32
 
 
-springBootVersion=2.6.2
+springBootVersion=2.6.3
 # This MUST match the Tomcat version dictated by springBootVersion
 springBootTomcatVersion=9.0.56
 
@@ -260,6 +260,8 @@ thumbnailatorVersion=0.4.8
 
 # used for tika-core in API and tika-parsers in search
 tikaVersion=2.2.1
+
+# sync with Tika
 tukaaniXZVersion=1.9
 
 validationApiVersion=1.1.0.Final
@@ -277,4 +279,5 @@ xercesImplVersion=2.12.1
 # using the relocated version
 xmlApisVersion=1.0.b2
 
+# sync with Tika
 xmlbeansVersion=3.1.0
