--- a/server/configs/mssql.properties
+++ b/server/configs/mssql.properties
@@ -20,6 +20,6 @@ jdbcURL=jdbc:jtds:sqlserver://${jdbcHost}:${jdbcPort}/${jdbcDatabase}${jdbcURLPa
 jdbcUser=sa
 jdbcPassword=sa
 
-# key for the encrypted property store
-masterEncryptionKey=defaultKey
+# key for the encrypted property store and other potentially sensitive content
+encryptionKey=defaultKey
 
