--- a/server/configs/pg.properties
+++ b/server/configs/pg.properties
@@ -20,6 +20,6 @@ jdbcURL=jdbc:postgresql://${jdbcHost}:${jdbcPort}/${jdbcDatabase}${jdbcURLParame
 jdbcUser=postgres
 jdbcPassword=sasa
 
-# key for the encrypted property store
-masterEncryptionKey=defaultKey
+# key for the encrypted property store and other potentially sensitive content
+encryptionKey=defaultKey
 
