--- a/server/configs/sqlserver.properties
+++ b/server/configs/sqlserver.properties
@@ -20,6 +20,6 @@ jdbcURL=jdbc:sqlserver://${jdbcHost}:${jdbcPort};databaseName=${jdbcDatabase};ap
 jdbcUser=sa
 jdbcPassword=labkeysa
 
-# key for the encrypted property store
-masterEncryptionKey=defaultKey
+# key for the encrypted property store and other potentially sensitive content
+encryptionKey=defaultKey
 
