--- a/gradle.properties
+++ b/gradle.properties
@@ -279,5 +279,5 @@ xercesImplVersion=2.12.1
 # using the relocated version
 xmlApisVersion=1.0.b2
 
-# sync with Tika
+# sync with Tika/POI
 xmlbeansVersion=5.0.3
