Issue 44781: Update application.properties and LabKeyServer to use "encryptionKey"

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -23,7 +23,7 @@ context.password[0]=@@jdbcPassword@@
 #context.password[1]=@@extraJdbcPassword@@
 
 #context.webAppLocation=@@pathToServer@@/build/deploy/labkeyWebapp
-context.masterEncryptionKey=@@masterEncryptionKey@@
+context.encryptionKey=@@encryptionKey@@
 #context.serverGUID=
 
 mail.smtpHost=@@smtpHost@@
