put back mssql properties

--- a/server/configs/mssql.properties
+++ b/server/configs/mssql.properties
@@ -5,7 +5,7 @@ smtpUser=Anonymous
 smtpPort=25
 
 # Use the jTDS jdbc driver on localhost
-databaseDefault=labkey_dev
+databaseDefault=labkey
 databaseBootstrap=labkey2
 databaseMaster=master
 databaseDefaultHost=localhost
@@ -18,7 +18,7 @@ databaseVersion=2008
 jdbcDriverClassName=net.sourceforge.jtds.jdbc.Driver
 jdbcURL=jdbc:jtds:sqlserver://${jdbcHost}:${jdbcPort}/${jdbcDatabase}${jdbcURLParameters}
 jdbcUser=sa
-jdbcPassword=Strong_Passw0rd
+jdbcPassword=sa
 
 # key for the encrypted property store and other potentially sensitive content
 encryptionKey=defaultKey
