--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-#moduleSet=all
+moduleSet=all
 #ideaIncludeAllModules=true
 # Uncomment the following line to turn on Gradle's file watching, which may improve efficiency
 # https://blog.gradle.org/introducing-file-system-watching
