--- a/server/configs/mssql.properties
+++ b/server/configs/mssql.properties
@@ -5,11 +5,12 @@ smtpUser=Anonymous
 smtpPort=25
 
 # Use the jTDS jdbc driver on localhost
-databaseDefault=labkey
+databaseDefault=labkeyDevelopAllStart
+#databaseDefault=labkeyDevelopAll
 databaseBootstrap=labkey2
 databaseMaster=master
 databaseDefaultHost=localhost
-databaseDefaultPort=1433
+databaseDefaultPort=1401
 
 # database type and version are used by the test harness
 databaseType=mssql
@@ -18,7 +19,7 @@ databaseVersion=2008
 jdbcDriverClassName=net.sourceforge.jtds.jdbc.Driver
 jdbcURL=jdbc:jtds:sqlserver://${jdbcHost}:${jdbcPort}/${jdbcDatabase}${jdbcURLParameters}
 jdbcUser=sa
-jdbcPassword=sa
+jdbcPassword=Strong!Passw0rd
 
 # key for the encrypted property store
 masterEncryptionKey=defaultKey
