revert accidental commit

--- a/server/configs/mssql.properties
+++ b/server/configs/mssql.properties
@@ -5,12 +5,11 @@ smtpUser=Anonymous
 smtpPort=25
 
 # Use the jTDS jdbc driver on localhost
-databaseDefault=labkeyDevelopAllStart
-#databaseDefault=labkeyDevelopAll
+databaseDefault=labkey
 databaseBootstrap=labkey2
 databaseMaster=master
 databaseDefaultHost=localhost
-databaseDefaultPort=1401
+databaseDefaultPort=1433
 
 # database type and version are used by the test harness
 databaseType=mssql
@@ -19,7 +18,7 @@ databaseVersion=2008
 jdbcDriverClassName=net.sourceforge.jtds.jdbc.Driver
 jdbcURL=jdbc:jtds:sqlserver://${jdbcHost}:${jdbcPort}/${jdbcDatabase}${jdbcURLParameters}
 jdbcUser=sa
-jdbcPassword=Strong!Passw0rd
+jdbcPassword=sa
 
 # key for the encrypted property store
 masterEncryptionKey=defaultKey
