--- a/server/configs/pg.properties
+++ b/server/configs/pg.properties
@@ -5,11 +5,7 @@ smtpUser=Anonymous
 smtpPort=25
 
 # Use the PostgreSQL jdbc driver on localhost
-#databaseDefault=labkeyDevelopAll
-#databaseDefault=labkey21XAll
-databaseDefault=labkey22X
-#databaseDefault=labkeyDevelopAllStart
-#databaseDefault=labkeyDevelop
+databaseDefault=labkey
 databaseBootstrap=labkey2
 databaseMaster=template1
 databaseDefaultHost=localhost
