--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ import org.labkey.gradle.task.PurgeNpmAlphaVersions
 
 buildscript {
     repositories {
+        mavenCentral()
         maven {
             url "${artifactory_contextUrl}/plugins-release"
         }
@@ -102,6 +103,7 @@ allprojects {
 
     repositories
             {
+                mavenCentral()
                 // this if statement is necessary because the TeamCity artifactory plugin overrides
                 // the repositories but does not use these artifactory_ urls.  For others who are
                 // developing or building, you do need to specify the three artifactory_ properties
@@ -147,7 +149,7 @@ allprojects {
 //                    	url "https://repository.apache.org/content/repositories/orgapachetomcat-1322/"
 //                    }
                 }
-                mavenCentral()
+
             }
     configurations.all
             {
@@ -276,6 +278,7 @@ if (BuildUtils.shouldPublish(project) || BuildUtils.shouldPublishDistribution(pr
             }
             defaults
                     {
+                        publishBuildInfo = false
                         publishPom = true
                         publishIvy = false
                     }
