Downgrade GSON 2.9.0 -> 2.8.9 due to jclouds incompatibility

--- a/gradle.properties
+++ b/gradle.properties
@@ -149,7 +149,9 @@ graalVersion=20.0.0
 
 # Cloud and SequenceAnalysis bring gson in as a transitive dependency.
 # We resolve to the later version here to keep things consistent
-gsonVersion=2.9.0
+# Note: Current jclouds seems to require 2.8.9; attempting to upgrade to 2.9.0 cratered the S3 test suite with many
+# "java.lang.NoSuchMethodError: 'void com.google.gson.internal.ConstructorConstructor.<init>(java.util.Map)'" errors
+gsonVersion=2.8.9
 
 guavaVersion=31.1-jre
 gwtVersion=2.8.2
