Oracle: ship JDBC driver and fix limit rows

--- a/gradle.properties
+++ b/gradle.properties
@@ -217,6 +217,8 @@ objenesisVersion=1.0
 # increase from 2.0 for remoteclientapi/java
 opencsvVersion=2.3
 
+oracleJdbcVersion=21.5.0.0
+
 patriciaTrieVersion=0.6
 
 # sync with version Tika ships
