Issue 37040: Test Microsoft JDBC driver for SQL Server

--- a/server/configs/mssql.properties
+++ b/server/configs/mssql.properties
@@ -15,8 +15,10 @@ databaseDefaultPort=1433
 databaseType=mssql
 databaseVersion=2008
 
-jdbcDriverClassName=net.sourceforge.jtds.jdbc.Driver
-jdbcURL=jdbc:jtds:sqlserver://${jdbcHost}:${jdbcPort}/${jdbcDatabase}${jdbcURLParameters}
+#jdbcDriverClassName=net.sourceforge.jtds.jdbc.Driver
+jdbcDriverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#jdbcURL=jdbc:jtds:sqlserver://${jdbcHost}:${jdbcPort}/${jdbcDatabase}${jdbcURLParameters}
+jdbcURL=jdbc:sqlserver://${jdbcHost}:${jdbcPort};databaseName=${jdbcDatabase};user=${jdbcUser};password=${jdbcPassword};trustServerCertificate=true
 jdbcUser=sa
 jdbcPassword=sa
 
