--- a/gradle.properties
+++ b/gradle.properties
@@ -212,6 +212,8 @@ log4j2Version=2.17.2
 
 mysqlDriverVersion=8.0.29
 
+microsoftJdbcVersion=10.2.1.jre17
+
 objenesisVersion=1.0
 
 # increase from 2.0 for remoteclientapi/java
