--- a/gradle.properties
+++ b/gradle.properties
@@ -212,7 +212,7 @@ log4j2Version=2.17.2
 
 mysqlDriverVersion=8.0.29
 
-microsoftJdbcVersion=10.2.1.jre17
+mssqlJdbcVersion=10.2.1.jre17
 
 objenesisVersion=1.0
 
