Use mssql.properties and jTDS, sqlserver.properties for MS driver

--- a/server/configs/mssql.properties
+++ b/server/configs/mssql.properties
@@ -15,10 +15,8 @@ databaseDefaultPort=1433
 databaseType=mssql
 databaseVersion=2008
 
-#jdbcDriverClassName=net.sourceforge.jtds.jdbc.Driver
-jdbcDriverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#jdbcURL=jdbc:jtds:sqlserver://${jdbcHost}:${jdbcPort}/${jdbcDatabase}${jdbcURLParameters}
-jdbcURL=jdbc:sqlserver://${jdbcHost}:${jdbcPort};databaseName=${jdbcDatabase};trustServerCertificate=true
+jdbcDriverClassName=net.sourceforge.jtds.jdbc.Driver
+jdbcURL=jdbc:jtds:sqlserver://${jdbcHost}:${jdbcPort}/${jdbcDatabase}${jdbcURLParameters}
 jdbcUser=sa
 jdbcPassword=sa
 
