--- a/server/configs/sqlserver.properties
+++ b/server/configs/sqlserver.properties
@@ -16,7 +16,7 @@ databaseType=mssql
 databaseVersion=2008
 
 jdbcDriverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-jdbcURL=jdbc:sqlserver://${jdbcHost}:${jdbcPort};databaseName=${jdbcDatabase};applicationName=LabKey Server;${jdbcURLParameters}
+jdbcURL=jdbc:sqlserver://${jdbcHost}:${jdbcPort};databaseName=${jdbcDatabase};trustServerCertificate=true;applicationName=LabKey Server;${jdbcURLParameters}
 jdbcUser=sa
 jdbcPassword=labkeysa
 
