--- a/server/configs/sqlserver.properties
+++ b/server/configs/sqlserver.properties
@@ -1,4 +1,5 @@
 # Properties that tend to change between machines and system instances
+# Uses jTDS's SQL Server JDBC driver
 
 smtpHost=localhost
 smtpUser=Anonymous
