--- a/server/configs/mssql.properties
+++ b/server/configs/mssql.properties
@@ -1,4 +1,5 @@
 # Properties that tend to change between machines and system instances
+# Uses Microsoft's SQL Server JDBC driver
 
 smtpHost=localhost
 smtpUser=Anonymous
