Issue 37040: Switch to Microsoft JDBC driver for SQL Server (#264)

--- a/server/configs/mssql.properties
+++ b/server/configs/mssql.properties
@@ -1,4 +1,5 @@
 # Properties that tend to change between machines and system instances
+# Uses Microsoft's SQL Server JDBC driver
 
 smtpHost=localhost
 smtpUser=Anonymous
@@ -15,8 +16,8 @@ databaseDefaultPort=1433
 databaseType=mssql
 databaseVersion=2008
 
-jdbcDriverClassName=net.sourceforge.jtds.jdbc.Driver
-jdbcURL=jdbc:jtds:sqlserver://${jdbcHost}:${jdbcPort}/${jdbcDatabase}${jdbcURLParameters}
+jdbcDriverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+jdbcURL=jdbc:sqlserver://${jdbcHost}:${jdbcPort};databaseName=${jdbcDatabase};trustServerCertificate=true;applicationName=LabKey Server;${jdbcURLParameters}
 jdbcUser=sa
 jdbcPassword=sa
 
