--- a/gradle.properties
+++ b/gradle.properties
@@ -57,7 +57,7 @@ windowsProteomicsBinariesVersion=1.0
 # The current version numbers for the gradle plugins.
 artifactoryPluginVersion=4.21.0
 gradleNodePluginVersion=3.0.1
-gradlePluginsVersion=1.33.1
+gradlePluginsVersion=1.34.1
 owaspDependencyCheckPluginVersion=5.2.1
 versioningPluginVersion=1.1.0
 
@@ -211,6 +211,8 @@ kaptchaVersion=2.3
 log4j2Version=2.17.2
 
 mysqlDriverVersion=8.0.29
+
+mssqlJdbcVersion=10.2.1.jre17
 
 objenesisVersion=1.0
 
