--- a/server/configs/jtds.properties
+++ b/server/configs/jtds.properties
@@ -1,4 +1,5 @@
 # Properties that tend to change between machines and system instances
+# Uses jTDS's SQL Server JDBC driver
 
 smtpHost=localhost
 smtpUser=Anonymous
@@ -15,8 +16,8 @@ databaseDefaultPort=1433
 databaseType=mssql
 databaseVersion=2008
 
-jdbcDriverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-jdbcURL=jdbc:sqlserver://${jdbcHost}:${jdbcPort};databaseName=${jdbcDatabase};applicationName=LabKey Server;${jdbcURLParameters}
+jdbcDriverClassName=net.sourceforge.jtds.jdbc.Driver
+jdbcURL=jdbc:jtds:sqlserver://${jdbcHost}:${jdbcPort}/${jdbcDatabase}${jdbcURLParameters}
 jdbcUser=sa
 jdbcPassword=labkeysa
 
