Eliminate erroneous comment and strive for consistency

--- a/server/configs/pg.properties
+++ b/server/configs/pg.properties
@@ -1,10 +1,10 @@
 # Properties that tend to change between machines and system instances
+# Uses the PostgreSQL JDBC driver
 
 smtpHost=localhost
 smtpUser=Anonymous
 smtpPort=25
 
-# Use the PostgreSQL jdbc driver on localhost
 databaseDefault=labkey
 databaseBootstrap=labkey2
 databaseMaster=template1
