Upgrade to Spring Framework 5.3.22 (#309)

--- a/gradle.properties
+++ b/gradle.properties
@@ -256,9 +256,7 @@ springBootVersion=2.7.2
 # This MUST match the Tomcat version dictated by springBootVersion
 springBootTomcatVersion=9.0.65
 
-# N.B. Spring version 5+ brings in a change to form handling such that GET and POST parameters are both used when
-# posting a form. For some of our forms this causes heartache.
-springVersion=4.3.20.RELEASE
+springVersion=5.3.22
 
 sqliteJdbcVersion=3.7.2
 
