We ❤ alphabetical order

--- a/gradle.properties
+++ b/gradle.properties
@@ -95,6 +95,9 @@ apacheDirectoryVersion=1.0.3
 #Transitive dependency of Apache directory: 2.0.18 contains some regressions
 apacheMinaVersion=2.0.19
 
+# Keep in sync with springBootTomcatVersion below
+apacheTomcatVersion=9.0.68
+
 # (mothership) -> json-path -> json-smart -> accessor-smart
 # (core) -> graalvm
 # tika
@@ -262,9 +265,8 @@ slf4jLog4jApiVersion=1.7.33
 
 springBootVersion=2.7.5
 # This MUST match the Tomcat version dictated by springBootVersion
+# Also, keep this in sync with apacheTomcatVersion above
 springBootTomcatVersion=9.0.68
-# Usually kept in sync with spring boot Tomcat version above
-apacheTomcatVersion=9.0.68
 
 springVersion=5.3.22
 
