Update issue reference

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -205,8 +205,7 @@ task('createModule', type: CreateModule, group: "Module",
 
 // We add this configuration here so we have a single location to link to for the npm and node executables.
 // Each project that requires node will have its own downloaded version of node and npm, but for the symlinkNode
-// task we need a single location, and one that works even when not building from source
-// (https://www.labkey.org/Rochester/support%20tickets/issues-details.view?issueId=35207)
+// task we need a single location, and one that works even when not building from source (Issue 35207)
 project.node {
     workDir = project.file("${project.rootProject.buildDir}/.node")
     npmWorkDir = project.file("${project.rootProject.buildDir}/.node")
