Issue 46627: Update to Batik 1.16

--- a/gradle.properties
+++ b/gradle.properties
@@ -101,8 +101,8 @@ apacheMinaVersion=2.0.19
 # tika
 asmVersion=9.2
 
-# Apache Batik -- Batik version is dictated by Apache FOP, but we need to pull in batik-codec separately
-batikVersion=1.14
+# Apache Batik -- Batik version needs to be compatible with Apache FOP, but we need to pull in batik-codec separately
+batikVersion=1.16
 
 # sync with Tika version
 bouncycastleVersion=1.70
