Attempt to sync versions

--- a/gradle.properties
+++ b/gradle.properties
@@ -65,7 +65,7 @@ versioningPluginVersion=1.1.0
 # will be downloaded and used. If not set, the existing local installations will be use
 # The version of npm corresponds to the given version of node
 npmVersion=6.14.13
-nodeVersion=14.17.1
+nodeVersion=16.13.1
 nodeRepo=https://nodejs.org/dist
 # Directory in a project's build directory where the node binary will be placed
 nodeWorkDirectory=.node
@@ -221,8 +221,8 @@ opencsvVersion=2.3
 
 patriciaTrieVersion=0.6
 
-# sync with version Tika ships
-pdfboxVersion=2.0.23
+# Deviate from version Tika ships to be compatible with Batik updates
+pdfboxVersion=2.0.24
 
 # sync with version Tika ships
 poiVersion=4.1.2
