Issue 46627: Update to Batik 1.16 and FOP to 2.7 (#342)

--- a/gradle.properties
+++ b/gradle.properties
@@ -103,8 +103,8 @@ apacheMinaVersion=2.0.19
 # tika
 asmVersion=9.1
 
-# Apache Batik -- Batik version is dictated by Apache FOP, but we need to pull in batik-codec separately
-batikVersion=1.10
+# Apache Batik -- Batik version needs to be compatible with Apache FOP, but we need to pull in batik-codec separately
+batikVersion=1.16
 
 bouncycastleVersion=1.60
 
@@ -138,7 +138,7 @@ ehcacheCoreVersion=2.6.8
 flyingsaucerVersion=R8
 
 # Apache FOP -- linked to Apache Batik version above
-fopVersion=2.3
+fopVersion=2.7
 
 googleApiServicesCalendarVersion=v3-rev255-1.23.0
 googleApiClientVersion=1.23.0
@@ -221,8 +221,8 @@ opencsvVersion=2.3
 
 patriciaTrieVersion=0.6
 
-# sync with version Tika ships
-pdfboxVersion=2.0.23
+# Deviate from version Tika ships to be compatible with Batik updates
+pdfboxVersion=2.0.24
 
 # sync with version Tika ships
 poiVersion=4.1.2
