Upgrade Jackson library to the latest version

--- a/build.gradle
+++ b/build.gradle
@@ -216,7 +216,7 @@ allprojects {
                     force "com.google.http-client:google-http-client-gson:${googleHttpClientGsonVersion}"
                     // workflow (Activiti) brings in older versions of these libraries, so we need to force these versions
                     force "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}"
-                    force "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
+                    force "com.fasterxml.jackson.core:jackson-databind:${jacksonDatabindVersion}"
                     // The version of picard we depend on brings in an older version of htsjdk, but SequenceAnalysis depends on a later version
                     force "com.github.samtools:htsjdk:${htsjdkVersion}"
                     // Cloud module brings in earlier versions of this library, so we force the later one
