Upgrade SQL Server and Oracle JDBC drivers

--- a/gradle.properties
+++ b/gradle.properties
@@ -225,7 +225,7 @@ lombokVersion=1.18.24
 
 mysqlDriverVersion=8.0.31
 
-mssqlJdbcVersion=11.2.1.jre17
+mssqlJdbcVersion=12.1.0.jre11-preview
 
 # forced compatibility between docker and UserReg-WS
 nettyVersion=4.1.48.Final
@@ -237,7 +237,7 @@ opencsvVersion=2.3
 
 openTracingVersion=0.33.0
 
-oracleJdbcVersion=21.7.0.0
+oracleJdbcVersion=21.8.0.0
 
 patriciaTrieVersion=0.6
 
