Update comments on HttpClient 4.x dependencies

--- a/gradle.properties
+++ b/gradle.properties
@@ -177,6 +177,7 @@ htsjdkVersion=2.24.1
 httpclient5Version=5.2.1
 httpcore5Version=5.2
 
+# Not used directly, but these are widely used transitive dependencies
 httpclientVersion=4.5.14
 httpcoreVersion=4.4.16
 
