--- a/build.gradle
+++ b/build.gradle
@@ -187,10 +187,10 @@ allprojects {
                     force "commons-codec:commons-codec:${commonsCodecVersion}"
                     // force version consistency in TCRdb, SequenceAnalysis, API
                     force "org.apache.commons:commons-math3:${commonsMath3Version}"
-                    // force version for api, accounts, fileTransfer, harvest, scrumtime, docker
+                    // force version for cloud, docker, fileTransfer, googledrive, scrumtime, tcrb, wnprc_ehr
                     force "org.apache.httpcomponents:httpcore:${httpcoreVersion}"
                     force "org.apache.httpcomponents.core5:httpcore5:${httpcore5Version}"
-                    // force version for api, docker, fileTransfer, harvest, scrumtime, accounts
+                    // force version for cloud, docker, fileTransfer, googledrive, scrumtime, tcrb, wnprc_ehr
                     force "org.apache.httpcomponents:httpclient:${httpclientVersion}"
                     force "org.apache.httpcomponents.client5:httpclient5:${httpclient5Version}"
                     // force version for SequenceAnalysis, api, cloud
